--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 
 # -----------FIREBASE RELATED DATA---------------
-REACT_APP_API_KEY=  "AIzaSyDSX0y4ikmd8cMgOdLXsu-T5UDrV-T3Yr4";
-REACT_APP_MESSAGE_SENDER_ID= "49744249229";
-REACT_APP_APP_ID= "1:49744249229:web:2608e81416fb7154817dc4";
-REACT_APP_MEASUREMENT_ID= "G-D53ZPXKYXJ";
+REACT_APP_API_KEY=  "AIzaSyAiI7KZWPChVRTJvjtbTCPKairbeVns754";
+REACT_APP_MESSAGE_SENDER_ID="716273178562";
+REACT_APP_APP_ID= "1:716273178562:web:fda8ad215f67ab323b285b";
+REACT_APP_MEASUREMENT_ID= "G-5BPS4J6G68";
 
 # ---------------END----------------------
