--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 
 # -----------FIREBASE RELATED DATA---------------
-REACT_APP_API_KEY=  "AIzaSyAiI7KZWPChVRTJvjtbTCPKairbeVns754";
-REACT_APP_MESSAGE_SENDER_ID="716273178562";
-REACT_APP_APP_ID= "1:716273178562:web:fda8ad215f67ab323b285b";
-REACT_APP_MEASUREMENT_ID= "G-5BPS4J6G68";
+REACT_APP_API_KEY=  "AIzaSyAzq-XC2la4xp2eLfECl6hd4uAzCvyj3x0";
+REACT_APP_MESSAGE_SENDER_ID="689286912692";
+REACT_APP_APP_ID= "1:689286912692:web:fe389ee38a000512b015e1";
+REACT_APP_MEASUREMENT_ID= "G-Z3864DHDM2";
 
 # ---------------END----------------------
